-Living flesh armor and weapons now require shadow scales/tissue samples in their crafting recipes instead of demonite/crimtane bars
-Slightly changed the spooky mod biome compass arrow texture to make it more obvious that its an arrow pointing somewhere
-Changed spike shell basher into a shield accessory that gives 3 defense and retaliates with harmful spikes when you take damage


~Enemies & Bosses~

Boss Changes:
-Buffed rot gourd max hp from 2200 to 2600
-Changed daffodils "hide under the platform" telegraphs to green instead of yellow to prevent confusion between her 2 different telegraphs
-Orro-boro's floating arrow telegraphs have been removed, and its attacks that used these have been tweaked so that orro & boro are almost never actually off-screen to make their attacks easier to understand
-Orro-boro's segments now have massively improved following/turning, the segments now move more naturally and look much better when orro-boro makes sharp turns
-All of orro-boro's body and tail segments are immune to all debuffs (Excluding special debuffs such as whip tag damage debuffs)
-Big bone's fight has received many changes, some of his attacks have been replaced with entirely new ones and some have been visually improved, as well as a new resprite for big bone
-Big bone will now pulse with heat and gains a steam effect above his head in phase 2 to show him getting warmer
-Big bone's death animation now ends with him exploding, turning black, and poofing into ash like a cartoon

Enemy Changes:
-Observing orchids will now only chase you if they have light of sight to you
-Ear worms movement and behavior is now more natural looking, they now recoil when shooting their sound blast, and they no longer draw behind tiles for better visibility
-Buffed all mist ghosts health and damage since they are now spawned in the new mysterious gravestone ambushes and not just randomly when they break


~Miscellaneous Changes~

-Made the spider grotto biome size a tiny bit smaller